<resources>
    <string name="app_name">ChecklistApp</string>
    <string name="GENERAL_DUMMY">Dummy</string>
    <string name="GENERAL_YES">Yes</string>
    <string name="GENERAL_NO">No</string>
    <string name="GENERAL_NA">N/A</string>

    <!-- Button -->
    <string name="BTN_NEXT">Next</string>
    <string name="BTN_SAVE">Save</string>
    <string name="BTN_SUBMIT">Submit</string>

    <!-- Progress Dialog -->
    <string name="PROGRESS_DIALOG_TITLE">Loading</string>;
    <string name="PROGRESS_DIALOG_MSG">Wait while loading...</string>;

    <!-- Alert -->
    <string name="ALERT_INCOMPLETE_TITLE">Incomplete</string>
    <string name="ALERT_INCOMPLETE_MSG">All fields are required.</string>
    <string name="ALERT_BTN_OK">OK</string>

    <!-- Login -->
    <string name="LOGIN_LBL_LOGIN_ID">Login ID</string>
    <string name="LOGIN_LBL_PASSWORD">Password</string>
    <string name="LOGIN_BTN_LOGIN">Login</string>

    <!-- Home -->
    <string name="HOME_NAV_TITLE">Home</string>

    <!-- Template -->
    <string name="TEMPLATE_NAV_TITLE">Templates</string>
    <string name="TEMPLATE_LBL_STATUS">Status:</string>
    <string name="TEMPLATE_LBL_CREATED_ON">Created On:</string>
    <string name="TEMPLATE_LBL_MODIFIED_ON">Last Modified On:</string>
    <string name="TEMPLATE_LBL_COMMENT">Comment</string>
    <string name="TEMPLATE_LBL_SIGNATURE">Signature</string>

    <!-- Settings -->
    <string name="SETTINGS_NAV_TITLE">Settings</string>

    <!-- Capture Signature -->
    <string name="CAPTURE_SIGNATURE_NAV_TITLE">Signature</string>

</resources>
