<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/lblTitle"
        android:text="@string/GENERAL_DUMMY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
    </TextView>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitle"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GENERAL_YES"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />

        <RadioButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GENERAL_NO"
            android:textSize="16sp"
            android:layout_marginLeft="30dp" />

        <RadioButton
            android:id="@+id/btnNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GENERAL_NA"
            android:textSize="16sp"
            android:layout_marginLeft="30dp" />
    </RadioGroup>

</RelativeLayout>