<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lblStatusTitle"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/TEMPLATE_LBL_STATUS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/GENERAL_DUMMY"
        app:layout_constraintStart_toEndOf="@+id/lblStatusTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCreatedOnTitle"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/TEMPLATE_LBL_CREATED_ON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStatusTitle" />

    <TextView
        android:id="@+id/lblCreatedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/GENERAL_DUMMY"
        app:layout_constraintStart_toEndOf="@+id/lblCreatedOnTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblStatus" />

    <TextView
        android:id="@+id/lblModifiedOnTitle"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/TEMPLATE_LBL_MODIFIED_ON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCreatedOnTitle" />

    <TextView
        android:id="@+id/lblModifiedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="491dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/GENERAL_DUMMY"
        app:layout_constraintStart_toEndOf="@+id/lblModifiedOnTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblCreatedOn" />

</android.support.constraint.ConstraintLayout>